--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.4",
+    "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
